# ml_fast_api

./: .gitignore  README.md  main.py  model.py  pyproject.toml  test.py
.github/workflows/: python-publish.yml
